kubernetes/apps/networking/traefik/dashboard/basic-auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basic-auth
  namespace: networking
spec:
  basicAuth:
    secret: traefik-secret
