kubernetes/apps/networking/traefik/dashboard/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basic-auth
  namespace: networking
spec:
  basicAuth:
    secret: traefik-secret
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect
  namespace: networking
spec:
  redirectRegex:
    regex: ^https://traefik\.${DOMAIN}/?$
    replacement: https://traefik.${DOMAIN}/dashboard/
